# todo-cli

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
docs/: idea.md
todo/: __init__.py  __main__.py  commands.py  constants.py  git_utils.py  task.py  task_orm.py  utils.py
todo/commands/: _ai_with_start_of_parameter_infer.py  add.py  ai.py  list.py  remove.py  sync.py  update.py
todo/notifications/: ios.py  ios_reminders.py
